--- a/css/styles.css
+++ b/css/styles.css
@@ -74,24 +74,43 @@ footer {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("/assets/hero.jpg");
+    height: 30vh;
+  background-position: center;
+  background-size: cover;
+  position:relative;
 
   /* TODO: MODULE_LAYOUT */
   /* 1. Set a specific height. */
   /* 2. Position and center the image to scale nicely on all screens. */
 }
+.heading{
+  font-size:40px;
+  text-align: center;
+}
 
 .hero-subheading {
-  font-size: 24px;
-  font-weight: 100;
+  font-size:24px;
+  font-weight:100;
+  text-align:center;
+
 }
 .hero-input {
   width: 80%;
   height: 50px;
   padding: 16px;
   border-radius: 8px;
-  border: none;
+  border:none;
+  justify-content: center;
+  text-align:center;
+  margin-left:10%;
+  margin-right:10%;
+  
+  
+ 
+
 }
 
+}
 .nav-link {
   margin-right: 36px;
 }
