--- a/css/styles.css
+++ b/css/styles.css
@@ -48,17 +48,38 @@ footer {
 /* Layout page CSS */
 /* ================================== */
 
+
 .tile {
   /* TODO: MODULE_CARDS */
   /* 1. Fill in the required properties. */
+  width:100%;
+  height:100%;
+display:flex;
+flex-direction: column;
+position: relative;
+justify-content: center;
+align-items: center;
+border-radius: 8px;
+overflow:hidden;
+transition-duration: 2s;
+
+
+ 
 }
 .tile img {
   /* TODO: MODULE_CARDS */
   /* 1. Fill in the required properties. */
+  width:100%;
+height:100%;
+
 }
 .tile img:hover {
   /* TODO: MODULE_CARDS */
   /* 1. Fill in the required properties. */
+  filter:brightness(50%);
+  transform:scale(1.1)
+  
+ 
 }
 
 /* Hint: Notice the position:absolute and z-index properties. */
@@ -68,30 +89,30 @@ footer {
   z-index: 1;
   text-transform: uppercase;
   letter-spacing: 2px;
+  bottom:0;
+
 }
 
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("/assets/hero.jpg");
-    height: 30vh;
+    height: 50vh;
   background-position: center;
   background-size: cover;
   position:relative;
+  background-repeat:no-repeat;
 
   /* TODO: MODULE_LAYOUT */
   /* 1. Set a specific height. */
   /* 2. Position and center the image to scale nicely on all screens. */
 }
-.heading{
-  font-size:40px;
-  text-align: center;
-}
+
 
 .hero-subheading {
   font-size:24px;
   font-weight:100;
-  text-align:center;
+
 
 }
 .hero-input {
@@ -100,10 +121,6 @@ footer {
   padding: 16px;
   border-radius: 8px;
   border:none;
-  justify-content: center;
-  text-align:center;
-  margin-left:10%;
-  margin-right:10%;
   
   
  
